Update CoMind section

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -59,7 +59,7 @@
 \vspace{1pt}
 \colorbox{shade}{\textcolor{text1}{
 \begin{tabular}{c|p{7cm}}
-\raisebox{-3pt}{\textifsymbol{18}} & 11 Lantern Court, CB7 4JR \\ % Address
+\raisebox{-3pt}{\textifsymbol{18}} & 7 Candover St., London, W1W 7DN \\ % Address
 \raisebox{-2pt}{\Mobilefone} & +44 (0)7794 798 945 \\ % Phone number
 \raisebox{-1pt}{\Letter} & \href{mailto:sc2018@cam.ac.uk}{sav.cardamone@gmail.com} \\ % Email address
 \end{tabular}
@@ -72,18 +72,25 @@
 \section{Employment}
 \begin{tabular}{rl}
 2021 -- Present & \textbf{Senior Signal Processing Engineer, CoMind Technologies}\\
-&Brain-Computer interfaces.\\
+&I have led the internal development of the signal processing pipeline required for the\\
+&procurement of neurological signals from experimental data. I have led work to scope\\
+&out a comprehensive set of work packages that will allow for this processing to be\\
+&conducted in a quasi-realtime fashion, thereby allowing the experimentalists to optimise\\
+&configurations on-the-fly. I am also involved in the development of embedded and low-level\\
+&software, including control suites for digital acquisition and waveform generation.\\
 &\\
 2018 -- 2021 & \textbf{Senior Engineer, Cambridge Consultants Ltd}\\
-&My work largely deals with the physical layer in 5G, recent projects including:\\
+&My work largely dealt with the physical layer in 5G, projects including:\\
 &\hspace{5mm}*\hspace{3mm}Porting of performance critical sections of PXSCH to CUDA.\\
 &\hspace{5mm}*\hspace{3mm}Development of in-house implementation of the full NR PHY (primarily FEC\\
 &\hspace{5mm}\hphantom{*}\hspace{3mm}and channel estimation/ equalisation) for an embedded platform.\\
 &\hspace{5mm}*\hspace{3mm}Benchmarking throughput of LDPC codec on a CEVA DSP.\\
-&I have worked on other wireless standards (BR/EDR and BLE) for low-power embedded\\ 
-&systems. I have been involved in the winning and subsequent completion of work\\ 
+&I worked on other wireless standards (BR/EDR and BLE) for low-power embedded\\ 
+&systems. I was involved in the winning and subsequent completion of work\\ 
 &commissioned by a multinational hardware vendor, concerning the appraisal of a novel\\ 
 &SIMD HPC platform for specific workloads in geophysical resource exploration.\\
+&I led the quantum technologies special interest group, obtaining internal funding\\
+&for the development of several internal demonstrators.\\ 
 &\\
 2016 -- 2018 & \textbf{Postdoctoral Research Associate, The University of Cambridge}\\
 & Postdoctoral research associate with Dr Alex Thom, working on the acceleration of\\ 
